--- a/.tmux.conf.v2.4
+++ b/.tmux.conf.v2.4
@@ -65,6 +65,9 @@ set -g history-limit 10000
 # Set ability to capture on start and restore on exit window data when running an application
 setw -g alternate-screen on
 
+set -g default-terminal "xterm-256color-italic"
+set-option -ga terminal-overrides ",xterm-256color-italic:Tc"
+
 # Initializes TMUX plugin manager.
 # Keep this line at the very bottom of tmux.conf.
 run-shell '~/.tmux/plugins/tpm/tpm'
