--- a/.tmux.conf.v2.4
+++ b/.tmux.conf.v2.4
@@ -1,11 +1,4 @@
-# List of plugins
-# Supports `github_username/repo` or full git repo URLs
-set -g @tpm_plugins '              \
-  tmux-plugins/tpm                 \
-  tmux-plugins/tmux-sensible       \
-  tmux-plugins/tmux-resurrect      \
-  tmux-plugins/tmux-continuum      \
-'
+
 set -g prefix ^l
 
 ## tmux resurrect plugin
@@ -53,9 +46,6 @@ set -g visual-activity on
 set-window-option -g mode-keys vi
 bind-key -Tcopy-mode-vi 'v' send -X begin-selection
 bind-key -Tcopy-mode-vi 'y' send -X copy-selection
-#bind-key -t vi-copy 'v' begin-selection
-#bind-key -t vi-copy 'y' copy-selection
-#bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
 
 bind y run-shell "tmux show-buffer | xclip > /dev/null; tmux display-message 'Copied tmux buffer to system clipboard'"
 
@@ -65,9 +55,19 @@ set -g history-limit 10000
 # Set ability to capture on start and restore on exit window data when running an application
 setw -g alternate-screen on
 
-set -g default-terminal "xterm-256color-italic"
-set-option -ga terminal-overrides ",xterm-256color-italic:Tc"
+
+set -g default-terminal 'tmux'
+set-option -ga terminal-overrides ",screen-256color:Tc"
+
+# List of plugins
+# Supports `github_username/repo` or full git repo URLs
+set -g @tpm_plugins '              \
+  tmux-plugins/tpm                 \
+  tmux-plugins/tmux-sensible       \
+  tmux-plugins/tmux-resurrect      \
+  tmux-plugins/tmux-continuum      \
+'
 
 # Initializes TMUX plugin manager.
 # Keep this line at the very bottom of tmux.conf.
-run-shell '~/.tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tpm/tpm'
