--- a/.tmux.conf.v2.4
+++ b/.tmux.conf.v2.4
@@ -1,5 +1,11 @@
 
-set -g prefix ^l
+# unbind default prefix and set it to Ctrl+a
+unbind C-b
+set -g prefix C-a
+bind C-a send-prefix
+
+# for nested tmux sessions
+bind-key a send-prefix
 
 ## tmux resurrect plugin
 set -g @resurrect-save 'S'
@@ -42,16 +48,25 @@ bind N command-prompt 'rename-session %%'
 setw -g monitor-activity on
 set -g visual-activity on
 
-# # Vi copypaste mode
-set-window-option -g mode-keys vi
-bind-key -Tcopy-mode-vi 'v' send -X begin-selection
-bind-key -Tcopy-mode-vi 'y' send -X copy-selection
+# synchronize all panes in a window
+bind y setw synchronize-panes on
+bind Y setw synchronize-panes off
+bind y setw synchronize-panes
 
-bind y run-shell "tmux show-buffer | xclip > /dev/null; tmux display-message 'Copied tmux buffer to system clipboard'"
+
+# # Vi copypaste mode
+# set vi mode for copy mode
+set-window-option -g mode-keys vi
+unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "xsel -i -p && xsel -o -p | xsel -i -b"
 
 # Scroll History
 set -g history-limit 10000
- 
+
 # Set ability to capture on start and restore on exit window data when running an application
 setw -g alternate-screen on
 
