--- a/.tmux.conf.v2.4
+++ b/.tmux.conf.v2.4
@@ -17,6 +17,7 @@ set -g @continuum-boot 'on'
 set -g @continuum-restore 'on'
 
 bind 'v' split-window -h
+bind '-' split-window -v
 
 bind 1 select-pane -t 0
 bind 2 select-pane -t 1
@@ -28,6 +29,21 @@ bind 7 select-pane -t 6
 bind 8 select-pane -t 7
 bind 9 select-pane -t 8
 bind 0 select-pane -t 9
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# Go to prev/next window
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
+
+# Resize pane shortcuts
+bind -r H resize-pane -L 8
+bind -r J resize-pane -D 8
+bind -r K resize-pane -U 8
+bind -r L resize-pane -R 8
 
 bind ! select-window -t 0
 bind @ select-window -t 1
@@ -48,6 +64,9 @@ bind N command-prompt 'rename-session %%'
 setw -g monitor-activity on
 set -g visual-activity on
 
+set-option -g set-titles on
+set-option -g set-titles-string "#T - #W"
+
 # synchronize all panes in a window
 bind y setw synchronize-panes on
 bind Y setw synchronize-panes off
@@ -55,8 +74,15 @@ bind y setw synchronize-panes
 
 
 # # Vi copypaste mode
+#set-window-option -g mode-keys vi
+#bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+#bind-key -Tcopy-mode-vi 'y' send -X copy-selection
+
+
 # set vi mode for copy mode
+#setw -g mode-keys vi
 set-window-option -g mode-keys vi
+# more settings to make copy-mode more vim-like
 unbind [
 bind Escape copy-mode
 unbind p
@@ -64,9 +90,11 @@ bind p paste-buffer
 bind-key -Tcopy-mode-vi 'v' send -X begin-selection
 bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "xsel -i -p && xsel -o -p | xsel -i -b"
 
+#bind y run-shell "tmux show-buffer | xclip > /dev/null; tmux display-message 'Copied tmux buffer to system clipboard'"
+
 # Scroll History
 set -g history-limit 10000
-
+ 
 # Set ability to capture on start and restore on exit window data when running an application
 setw -g alternate-screen on
 
