Start window numbering from 1

--- a/.tmux.conf.v2.4
+++ b/.tmux.conf.v2.4
@@ -30,6 +30,9 @@ bind 8 select-pane -t 7
 bind 9 select-pane -t 8
 bind 0 select-pane -t 9
 
+set -g base-index 1
+setw -g pane-base-index 1
+
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
@@ -45,23 +48,23 @@ bind -r J resize-pane -D 8
 bind -r K resize-pane -U 8
 bind -r L resize-pane -R 8
 
-bind ! select-window -t 0
-bind @ select-window -t 1
-bind '#' select-window -t 2
-bind '$' select-window -t 3
-bind % select-window -t 4
-bind ^ select-window -t 5
-bind & select-window -t 6
-bind * select-window -t 7
-bind ( select-window -t 8
-bind ) select-window -t 10
+bind ! select-window -t 1
+bind @ select-window -t 2
+bind '#' select-window -t 3
+bind '$' select-window -t 4
+bind % select-window -t 5
+bind ^ select-window -t 6
+bind & select-window -t 7
+bind * select-window -t 8
+bind ( select-window -t 9
+bind ) select-window -t 11
 
 bind r source-file ~/.tmux.conf
 bind n command-prompt 'rename-window %%'
 bind N command-prompt 'rename-session %%'
 
 # Activity monitoring
-setw -g monitor-activity on
+setw -g monitor-activity off
 set -g visual-activity on
 
 set-option -g set-titles on
